--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
               <div class="dropdown">
                 <button onclick="dropdown()" class="dropDown">Theme</button>
                 <div id="myDropDown" class="dropdown-content">
-                  <button class="dark btn" onclick="setTheme('dark')">Dark</button>
-                  <button class="red btn" onclick="setTheme('red')">Grey</button>
-                  <button class="light btn" onclick="setTheme('light')">Cream</button>
-                  <button class="light btn" onclick="setTheme('default')">Light</button>
+                  <button class="dark mybtn" onclick="setTheme('dark')">Dark</button>
+                  <button class="red mybtn" onclick="setTheme('red')">Grey</button>
+                  <button class="light mybtn" onclick="setTheme('light')">Cream</button>
+                  <button class="light mybtn" onclick="setTheme('default')">Light</button>
                 </div>
                 
               </div>
@@ -56,6 +56,7 @@
                <a class="nav" href="/selection.html">snippets</a>
                <a class="nav" href="/contact.html">Contact</a>
           </div>
+          
         </div>
 
         </div>
