--- a/page.html
+++ b/page.html
@@ -38,10 +38,10 @@
             <div class="dropdown">
               <button onclick="dropdown()" class="dropDown">Theme</button>
               <div id="myDropDown" class="dropdown-content">
-                <button class="dark btn" onclick="setTheme('dark')">Dark</button>
-                <button class="red btn" onclick="setTheme('red')">Grey</button>
-                <button class="light btn" onclick="setTheme('light')">Cream</button>
-                <button class="light btn" onclick="setTheme('default')">Light</button>
+                <button class="dark mybtn" onclick="setTheme('dark')">Dark</button>
+                <button class="red mybtn" onclick="setTheme('red')">Grey</button>
+                <button class="light mybtn" onclick="setTheme('light')">Cream</button>
+                <button class="light mybtn" onclick="setTheme('default')">Light</button>
               </div>
               
             </div>
