--- a/selection.html
+++ b/selection.html
@@ -3,6 +3,7 @@
   <head>
     <title>code snippet - selection</title>
     <link rel="icon" type="image/svg" href="images/codesnippetLogo.svg" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/selection.css" type="text/css" />
     <link rel="stylesheet" href="../css/global.css" type="text/css" />
     <meta charset="UTF-8" />
@@ -18,7 +19,6 @@
       content="learn to code with HTML, CSS & Javascript, develop the web faster with best practice codesnippets"
     />
     <meta property="og:site_name" content="Codesnippet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
 
   <body>
@@ -39,10 +39,10 @@
                 <div class="dropdown">
                   <button onclick="dropdown()" class="dropDown">Theme</button>
                   <div id="myDropDown" class="dropdown-content">
-                    <button class="dark btn" onclick="setTheme('dark')">Dark</button>
-                    <button class="red btn" onclick="setTheme('red')">Grey</button>
-                    <button class="light btn" onclick="setTheme('light')">Cream</button>
-                    <button class="light btn" onclick="setTheme('default')">Light</button>
+                    <button class="dark mybtn" onclick="setTheme('dark')">Dark</button>
+                    <button class="red mybtn" onclick="setTheme('red')">Grey</button>
+                    <button class="light mybtn" onclick="setTheme('light')">Cream</button>
+                    <button class="light mybtn" onclick="setTheme('default')">Light</button>
                   </div>
                   
                 </div>
@@ -61,19 +61,17 @@
         <div id="introduction">
           <h1>The Selection</h1>
           <p class="intro">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-            feugiat sem vel tincidunt tincidunt. Aenean sed convallis augue,
-            dictum elementum lectus. In convallis vulputate risus, nec gravida
-            lorem.
+            This is our selection of useful and best-practise codesnippets that has beengathered through our experiences with development. 
+            With focus on CSS, HTML and Javascript, we want to serve you a plate of small codesnippet that easly can be inserted in your code.
           </p>
 
           <div id="snippetNav">
-            <button class="btn active" onClick="filterItems('all')">all</button>
-            <button class="btn" onClick="filterItems('structure')">
+            <button class="mybtn active" onClick="filterItems('all')">all</button>
+            <button class="mybtn" onClick="filterItems('structure')">
               structure
             </button>
-            <button class="btn" onClick="filterItems('items')">items</button>
-            <button class="btn" onClick="filterItems('themes')">themes</button>
+            <button class="mybtn" onClick="filterItems('items')">items</button>
+            <button class="mybtn" onClick="filterItems('themes')">themes</button>
           </div>
         </div>
         <div id="selection-con">
@@ -230,7 +228,7 @@
                     margin-right: auto;<br />
                     }<br /><br />
 
-                    button:hover {<br />
+                    :hover {<br />
                     color: rgb(55, 141, 221);<br />
                     background-image: linear-gradient(rgb(255, 255, 255),
                     rgb(255, 252, 254));<br />
