fixing header and styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <button class="dark mybtn" onclick="setTheme('dark')">Dark</button>
                   <button class="red mybtn" onclick="setTheme('red')">Grey</button>
                   <button class="light mybtn" onclick="setTheme('light')">Cream</button>
-                  <button class="light mybtn" onclick="setTheme('default')">Light</button>
+                  <button class="light mybtn active" onclick="setTheme('default')">Default</button>
                 </div>
                 
               </div>
