--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <button class="dark mybtn" onclick="setTheme('dark')">Dark</button>
                     <button class="red mybtn" onclick="setTheme('red')">Grey</button>
                     <button class="light mybtn" onclick="setTheme('light')">Cream</button>
-                    <button class="light mybtn" onclick="setTheme('default')">Light</button>
+                    <button class="light mybtn" onclick="setTheme('default')" >Default</button>
                   </div>
                   
                 </div>
@@ -59,7 +59,7 @@
             lets build the web faster with snippets from one coder to another!
           </p>
         </div>
-        <form name="myform" onSubmit="validateForm()">
+        <form name="myform" action="/contact.html" method="get" onSubmit="validateForm()">
           <div class="gridConForForm">
            
             <div class="grid-item1">
