--- a/page.html
+++ b/page.html
@@ -18,7 +18,10 @@
   <link rel="icon" type="image/svg" href="images/codesnippetLogo.svg" />
   <link rel="stylesheet" href="/css/global.css" type="text/css" />
   <link rel="stylesheet" href="/css/index.css" type="text/css" />
+  <link rel="stylesheet" href="/css/page.css" type="text/css" />
+
   <title>Code Snippet</title>
+ 
 </head>
 <body>
   <div class="content">
@@ -55,12 +58,10 @@
       </div>
     </div>
   </header>
-  <div id="bodyContainer" style="text-align: center">
-<h1>This is a article page</h1>
-<h3>This page is under construction, please come again soon</h3>
-
-</div>
-</div>
+<div id="bodyContainer">
+<h1 class="pageHeadline">This is a article page</h1>
+<h3 class="pageText">This page is under construction,="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;n</h3>
+</div></div>
 <footer>
     
   <div id="sitemap">
