using localStorage for theme across th website

--- a/pages/page.html
+++ b/pages/page.html
@@ -9,13 +9,13 @@
   <meta	name="description"	content='learn to code with HTML, CSS & Javascript, develop the web faster with best practice codesnippets'	/>
   <meta	name="keywords"	content="learn,	codesnippets,	develop, best practice, code, javascript, html, css">  
   <meta	property="og:type"	content="website"	/>
-  <meta	property="og:title"	content="Code snippets"	/>
+  <meta	property="og:title"	content="Code snippets - article"	/>
   <meta	property="og:url"	content="http://localhost:3001/"/>
   <meta	property="og:image"	content="http://localhost:3001/codesnippetLogo.svg">
   <meta	property="og:description"	content='learn to code with HTML, CSS & Javascript, develop the web faster with best practice codesnippets'/>
-  <meta	property="og:site_name"	content="Codesnippet"/>
+  <meta	property="og:site_name"	content="Codesnippet - article"/>
   
-  <link rel="icon" type="image/svg" href="images/codesnippetLogo.svg" />
+  <link rel="icon" type="image/svg" href="/images/codesnippetLogo.svg" />
   <link rel="stylesheet" href="/css/global.css" type="text/css" />
   <link rel="stylesheet" href="/css/index.css" type="text/css" />
   <link rel="stylesheet" href="/css/page.css" type="text/css" />
@@ -29,13 +29,13 @@
   <header>
     <div id="main-nav">
       <a onClick="openNav()" class="icon">
-        <img src="images/menu.png" id="toggle" />
+        <img src="/images/menu.png" id="toggle" />
       </a>
       <div id="mylinks">
         <a onClick="closeNav()" id="closeTag"> Close </a>
         <div id="logoHead">
         <a href="/index.html" class="logoHead">
-          <img src="images/codesnippetLogo.svg" id="logo" />code snippets</a>
+          <img src="/images/codesnippetLogo.svg" id="logo" />code snippets</a>
           </div>
           <div id="navLeft">
             <div class="dropdown">
@@ -50,8 +50,8 @@
             </div>
             <div id="mainNav">
              <a class="nav" href="/index.html">Home</a>
-             <a class="nav" href="/selection.html">snippets</a>
-             <a class="nav" href="/contact.html">Contact</a>
+             <a class="nav" href="/pages/selection.html">snippets</a>
+             <a class="nav" href="/pages/contact.html">Contact</a>
         </div>
       </div>
 
@@ -60,7 +60,7 @@
   </header>
 <div id="bodyContainer">
 <h1 class="pageHeadline">This is a article page</h1>
-<h3 class="pageText">This page is under construction,="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;style="column-count: 2;n</h3>
+<h3 class="pageText">[some example text]This page is an artcile page, which has been put together to show how I can devide 2 columns into one with media queries. The artcile that is meant to be placed here will be about wedesign and som cool fun tricks for every coder. we welcome input and believe that it us together taht creates teh web experience. </h3>
 </div></div>
 <footer>
     
@@ -68,15 +68,15 @@
     <ul  style="list-style-type:none">
       <ul class="list" ><li><a href="/index.html" class="firstItemInList">homepage</a></li>
         <li> <a href="/index.html">intro</a></li>
-        <li><a href="/index.html">What is ....</a></li>
-        <li><a href="/index.html">UX</a></li>
+        <li><a href="/pages/page.html">What is ....</a></li>
+        <li><a href="/pages/page.html">UX</a></li>
       </ul>
       <ul class="list" >
-        <li><a href="/selection.html" class="firstItemInList">selection</a></li>
-        <li><a href="/selection.html">codesnippets</a></li>
+        <li><a href="/pages/selection.html" class="firstItemInList">selection</a></li>
+        <li><a href="/pages/selection.html">codesnippets</a></li>
       </ul>
       <ul class="list">
-        <li><a href="/contact.html" class="firstItemInList">contact</a></li>
+        <li><a href="/pages/contact.html" class="firstItemInList">contact</a></li>
       </ul>
     </ul>
   </div>
