Rewrtiting and correcting sources toward images

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,7 +55,7 @@
         <div id="introduction">
           <h1 class="firstHeading">Do you want to be a part of this?</h1>
           <p>
-            We want to hear from you, Old-timer, new coder, sharing is caring
+            We want to hear from you,sharing is caring
             lets build the web faster with snippets from one coder to another!
           </p>
         </div>
