--- a/pages/selection.html
+++ b/pages/selection.html
@@ -92,7 +92,13 @@
         <div id="selection-con">
           <div class="selection structure" id="card">
             <div class="selectionHeader">
-              <img src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg" />
+              <img
+                src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg"
+                alt="
+                photo
+                by
+                Florian Krumm https://images.unsplash.com/photo-1555532538-dcdbd01d373d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1928&q=80"
+              />
               <div class="selectionHeaderText">
                 <h2>card</h2>
               </div>
@@ -163,7 +169,10 @@
                 </div>
                 <div class="snippetCon">
                   <div class="card">
-                    <img src="../images/fahrul-razi-BR6lrzCPYPk-unsplash.jpg" />
+                    <img
+                      src="../images/fahrul-razi-BR6lrzCPYPk-unsplash.jpg"
+                      alt="Photo by Fahrul Razi https://images.unsplash.com/photo-1556244573-c3686c0f0e78?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1332&q=80"
+                    />
                     <p>My first card</p>
                   </div>
                 </div>
@@ -173,7 +182,13 @@
 
           <div class="selection items" id="textOnHeader">
             <div class="selectionHeader">
-              <img src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg" />
+              <img
+                src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg"
+                alt="
+              photo
+              by
+              Florian Krumm https://images.unsplash.com/photo-1555532538-dcdbd01d373d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1928&q=80"
+              />
               <div class="selectionHeaderText">
                 <h2>Text on Image</h2>
               </div>
@@ -238,6 +253,7 @@
                   <div class="textOnImageCon">
                     <img
                       src="../images/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg"
+                      alt="Photo by Sergi Kabrera https://images.unsplash.com/photo-1529236183275-4fdcf2bc987e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1167&q=80"
                     />
                     <div class="textOnImageText">
                       <h2>Hello</h2>
@@ -250,7 +266,13 @@
 
           <div class="selection themes" id="button">
             <div class="selectionHeader">
-              <img src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg" />
+              <img
+                src="../images/florian-krumm-1osIUArK5oA-unsplash.jpg"
+                alt="
+              photo
+              by
+              Florian Krumm https://images.unsplash.com/photo-1555532538-dcdbd01d373d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1928&q=80"
+              />
               <div class="selectionHeaderText">
                 <h2>Button</h2>
               </div>
